--- a/app/index.1.html
+++ b/app/index.1.html
@@ -3,13 +3,12 @@
 
 <head>
     <title>Luopan</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/luopan.css">
-    <script src="./js/jQueryRotate.js"></script>
     <script src="./js/luopan.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/jQueryRotate.js"></script>
 
     <script>
         $(function () {
@@ -22,6 +21,42 @@
                 tenline.reset_tenline();
                 luopan.reset_luopan();
             }
+
+            //auto_run();
+
+            /*
+            window.setTimeout(function() {
+                stop_run();
+            }, 5000);
+            */
+
+            //alert('init jquery');
+
+            // //取得mouse每次的距離移動數據
+            // var my_mouseX = 0; //初始0
+            // $('body').mousemove(function (e) {
+
+            //     //console.log(e.clientX);
+            //     var mouse_now_X = e.clientX;
+            //     //每次的移動點
+            //     var move_number = 1;
+
+            //     //轉動羅盤
+            //     if (mouse_now_X > my_mouseX) {
+            //         luopan.deg_number -= move_number;
+            //         //luopan.set_transform(move_number);
+            //     } else {
+            //         luopan.deg_number += move_number;
+            //         //luopan.set_transform(move_number);
+            //     }
+            //     //記錄目前座標數據
+            //     my_mouseX = mouse_now_X;
+
+            // }).onmouseover(function (e) {
+            //     var mouse_now_X = e.clientX;
+            //     //記錄目前座標數據
+            //     //my_mouseX = mouse_now_X;
+            // });
 
         });
 
@@ -61,8 +96,6 @@
         //     number: 0.125,
         //     move: 'right'
         // });
-
-
 
     </script>
 
