--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,7 @@
 </head>
 
 <body>
-    <div id="app">
-
+    <div class="ts container" id="app">
         <!--buttonsbar-->
         <div class="ts active top right snackbar">
             <div class="content">
@@ -43,31 +42,23 @@
             </div>
         </div>
 
-
-        <div class="ts container">
-
-        </div>
-
-        <svg class="tensvg" id="tensvg">
-            <!--橫線-->
-            <line id="wline" />
-            <!--直線-->
-            <line id="hline" />
-        </svg>
-        <div class="luopan">
-            <img id="luopan" alt="Luopan image">
-        </div>
-
-        <!-- https://tocas-ui.com/modules/snackbar/ -->
-        <div class="ts snackbar">
-            <div class="content"></div>
-            <a class="action"></a>
-        </div>
-
     </div>
 
+    <svg class="tensvg" id="tensvg">
+        <!--橫線-->
+        <line id="wline" />
+        <!--直線-->
+        <line id="hline" />
+    </svg>
+    <div class="luopan">
+        <img id="luopan" alt="Luopan image">
+    </div>
 
-
+    <!-- https://tocas-ui.com/modules/snackbar/ -->
+    <div class="ts snackbar">
+        <div class="content"></div>
+        <a class="action"></a>
+    </div>
 
     <script>
         $(function () {
@@ -225,7 +216,6 @@
 
         })
     </script>
-
 
 </body>
 
