--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="ts container" id="app">
         <!--buttonsbar-->
-        <div class="computer only">
+        <div class="large device only">
             <div class="ts active bottom right snackbar">
                 <div class="content">
                     <i class="setting big icon"></i>
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="mobile only">
+        <div class="mobile or tablet only">
             <div class="ts active bottom right snackbar">
                 <div class="content">
                     <i class="setting big icon"></i>
