--- a/app/index.html
+++ b/app/index.html
@@ -33,11 +33,11 @@
                     </button>
                     <button class="ts big icon button" v-on:click="on_reset">
                         <i class="undo icon"></i>
-                        回正位
+                        歸四正位
                     </button>
                     <button class="ts big icon button" v-on:click="on_ten">
                         <i class="plus icon"></i>
-                        十字線
+                        {{ text_line }}
                     </button>
 
                 </div>
@@ -46,26 +46,23 @@
         <div class="mobile or tablet only">
             <div class="ts active bottom right snackbar">
                 <div class="content">
-                    <i class="setting big icon"></i>
-                    <button class="ts icon button" v-on:click="on_rotate">
+                    <i class="setting small icon"></i>
+                    <button class="ts small icon button" v-on:click="on_rotate">
                         <i class="compass icon"></i>
                         迴轉羅盤
                     </button>
-                    <button class="ts icon button" v-on:click="on_reset">
+                    <button class="ts small icon button" v-on:click="on_reset">
                         <i class="undo icon"></i>
                         歸四正位
                     </button>
-                    <button class="ts icon button" v-on:click="on_ten">
+                    <button class="ts small icon button" v-on:click="on_ten">
                         <i class="plus icon"></i>
-                        十字線
+                        {{ text_line }}
                     </button>
 
                 </div>
             </div>
         </div>
-
-
-
 
     </div>
     <svg class="tensvg" id="tensvg">
@@ -78,9 +75,8 @@
         <img id="luopan" alt="Luopan image">
     </div>
 
-
     <!-- https://tocas-ui.com/modules/snackbar/ -->
-    <div class="ts snackbar">
+    <div class="ts bottom left snackbar">
         <div class="content"></div>
         <a class="action"></a>
     </div>
@@ -114,7 +110,7 @@
             w_id: 'wline',
             h_id: 'hline',
             color_code: colors[1],
-            stroke_width: 2
+            stroke_width: 1
         })
 
         var auto_run = function(prop) {
@@ -152,6 +148,7 @@
                 transform_rotate: 0,
                 loading: false,
                 show_line: true,
+                text_line: '隱藏',
             },
             mounted: function() {
 
@@ -170,21 +167,34 @@
 
                 on_rotate: function(event) {
 
+                    if (window.rotate !== undefined) {
+                        tenline.reset_tenline();
+                        luopan.set_transform({
+                            number: window.rotate
+                        });
+                    }
+
+
                     Swal.fire({
-                        title: 'Enter rotate',
+                        title: '輸入數字0~359, 迴轉羅盤',
                         input: 'number',
-                        inputPlaceholder: 'Enter rotate'
+                        inputPlaceholder: '0~359'
                     }).then(function(data) {
 
                         var rotate = data.value;
                         console.log('rotate', rotate);
                         if (rotate !== undefined) {
+
+                            tenline.reset_tenline();
+                            luopan.reset_luopan();
+
                             setTimeout(function() {
                                 luopan.find_transform({
                                     number: rotate
                                 });
                             }, 1000)
                             window.rotate = rotate;
+
                         }
 
                     })
@@ -203,10 +213,18 @@
 
                 on_ten: function(event) {
 
-                    if (this.show_line)
+                    if (this.show_line) {
+                        this.text_line = '顯示';
+                    } else {
+                        this.text_line = '隱藏';
+                    }
+
+                    if (this.show_line) {
                         this.show_line = false;
-                    else
+                    } else {
                         this.show_line = true;
+                    }
+
                     tenline.show_line(this.show_line);
 
                 },
@@ -226,7 +244,7 @@
                         } else {
 
                             ts('.snackbar').snackbar({
-                                content: this.apiDates,
+                                content: window.rotateß,
                                 action: 'warning',
                                 actionEmphasis: 'warning',
                             });
