--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,6 @@
         <div class="large device only">
             <div class="ts active bottom right snackbar">
                 <div class="content">
-                    <i class="setting big icon"></i>
                     <button class="ts big icon button" v-on:click="on_rotate">
                         <i class="compass icon"></i>
                         迴轉羅盤
@@ -46,7 +45,6 @@
         <div class="mobile or tablet only">
             <div class="ts active bottom right snackbar">
                 <div class="content">
-                    <i class="setting small icon"></i>
                     <button class="ts small icon button" v-on:click="on_rotate">
                         <i class="compass icon"></i>
                         迴轉羅盤
@@ -99,7 +97,7 @@
 
         var luopan = new Luopan({
             element_id: 'luopan',
-            src: './images/luopan-201904.png'
+            src: './images/luopan-201904-無極.png'
         });
 
         //紫紅藍黑綠
